--- a/module2-sol/css/style.css
+++ b/module2-sol/css/style.css
@@ -2,7 +2,6 @@
 	box-sizing: border-box;
 	font-family: 'Courier New', monospace;
 	font-size: 15px;
-
 }
 
 h1 {
@@ -10,6 +9,7 @@ h1 {
 	font-weight: 1000;
 	color: #0C0603;
 	text-align: center;
+	font-size: 20px;
 }
 
 .row {
