--- a/module2-sol/css/style.css
+++ b/module2-sol/css/style.css
@@ -7,9 +7,10 @@
 
 h1 {
 	margin-bottom: 15px;
-	font-weight: 1000;
+	font-weight: 2000;
 	color: #0C0603;
 	text-align: center;
+	font-size: 30px;
 }
 
 .row {
