--- a/module2-sol/css/style.css
+++ b/module2-sol/css/style.css
@@ -1,6 +1,6 @@
 * {
 	box-sizing: border-box;
-	font-family: 'Courier New', monospace;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
 
 }
